# Konyak

./: .editorconfig  .gitignore  .gitmodules  .swiftlint.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  flake.nix  justfile  mkdocs.yml
.github/ISSUE_TEMPLATE/: bug.yml  (+1 more)
docs/: cli-distribution.md  cli-shell-contract.md  dlss-metalfx-design.md  dlss-metalfx-render-proof.md  flutter-architecture-plan.md  gptk-d3dmetal-import-progress.md  i2-planner-policy-split-audit.md  i2-primitive-boundary-audit.md  i3-type-safety-inventory.md  index.html  personal-project-notes.md  progress.md  r2-primitive-boundary-audit.md  r2-serialization-boundary-audit.md  release.md  runtime-integrity-debt-inventory.md  styles.css  todo.md  vscode-macos.md
runtime/: linux-wine-release.json  macos-wine-release.json
scripts/: build_d3d11_probe_exe.zsh  build_d3d12_minimal_sample_windows.ps1  build_d3d12_probe_exe.zsh  build_dlss_metalfx_preflight_windows.ps1  build_linux_release.zsh  build_macos_debug_app.zsh  build_macos_release.zsh  build_profile_install_fixture_windows.zsh  build_program_cwd_probe_exe.zsh  build_vulkan_probe_exe.zsh  cve_audit_baseline.json  draft_release_notes.zsh  fetch_windows_fixture_putty.zsh  finalize_macos_app.zsh  flutter_macos_agent_watch.py  generate_dart_sources.zsh  generate_profile_schema_docs.py  generate_profile_schema_docs_test.py  macos_flutter_toolchain_test.zsh  pages_site.py  pages_site_test.py  pages_workflow_test.py  prepare_flutter_macos_sdk.zsh  prepare_linux_dev_runtime.zsh  prepare_linux_dev_runtime_source.zsh  prepare_macos_dev_runtime_stack.zsh  prepare_macos_dev_runtime_stack_test.py  prepare_macos_optional_runtime_probe_bottles.zsh  prepare_macos_vulkan_probe_bottle.zsh  prepare_release.py  prepare_release_test.py  profile_install_fixture_test.py  pub_license_policy.json  resolve_linux_runtime_source_manifest.zsh  resolve_vscode_flutter_sdk.zsh  run_linux_release_check.zsh  run_linux_runtime_cli_smoke.zsh  run_linux_vulkan_wine_smoke.zsh  run_macos_dlss_metalfx_cli_smoke.zsh  run_macos_gptk_import_cli_smoke.zsh  (+22 more)
tests/fixtures/windows/d3d12_minimal_sample/: CMakeLists.txt  CMakePresets.json
tests/fixtures/windows/d3d12_minimal_sample/src/: main.cpp
tests/fixtures/windows/dlss_metalfx_preflight/: CMakeLists.txt  CMakePresets.json
tests/fixtures/windows/dlss_metalfx_preflight/src/: main.cpp
(+347 files in other folders)
